# CPU-Emulator-Lab

./: .gitignore  CMakeLists.txt  RAM.txt  README.md  data.txt  instructions.txt
headers/: CPU.h  Emulator.h  RAM.h
src/: CPU.cpp  Emulator.cpp  RAM.cpp
tests/: test_CPU.cpp
